Fixed popup text wrapping

--- a/maps1/public/stylesheets/style.css
+++ b/maps1/public/stylesheets/style.css
@@ -492,8 +492,8 @@ a.boxclose{
 }
 .popup .close {
   position: absolute;
-  top: 20px;
-  right: 30px;
+  top: 5x;
+  right: 20px;
   transition: all 200ms;
   font-size: 30px;
   font-weight: bold;
@@ -505,6 +505,7 @@ a.boxclose{
 }
 .popup .content {
   height:60%;
+  width:90%;
   overflow: auto;
 }
 
@@ -516,7 +517,6 @@ a.boxclose{
 }
 
 .overlay-li {
-  font-family: Times;
   font-size: 12px;
 }
 
